--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,11 @@
     <!-- LAST ICON -->
 
     <!-- BOOTSTRAP FOR CORA -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous" />
+      crossorigin="anonymous" /> -->
     <!--  -->
 
     <title>CV. Talongka Jaya - Quality is our Motto</title>
